# ai-learning-system

./: .gitignore  README.md
admin-web/: index.html  package.json  tsconfig.json  vite.config.ts
admin-web/docs/: README.md
admin-web/mock/: README.md
admin-web/public/: README.md
admin-web/src/: main.ts
admin-web/src/api/: http.ts
ai-service/: pyproject.toml
ai-service/app/: __init__.py  main.py
ai-service/app/adapters/: __init__.py
ai-service/app/api/: __init__.py  router.py
ai-service/app/api/routes/: __init__.py  health.py
ai-service/app/core/: __init__.py  config.py
ai-service/app/models/: __init__.py
ai-service/app/schemas/: __init__.py  health.py
ai-service/app/services/: __init__.py
ai-service/app/tasks/: __init__.py
ai-service/app/utils/: __init__.py
ai-service/docs/: README.md
ai-service/prompts/: README.md
ai-service/scripts/: start-dev.ps1
ai-service/tests/: README.md
android-client/: build.gradle.kts  settings.gradle.kts
android-client/app/: build.gradle.kts  proguard-rules.pro
android-client/build-logic/: README.md
android-client/docs/: README.md
android-client/gradle/: libs.versions.toml
backend-springboot/: pom.xml
backend-springboot/docs/: README.md
docs/architecture/: system-architecture-v1.md
docs/design/: project-structure-design-v1.md
docs/product/: product-requirements-v1.md
infra/: README.md  docker-compose.yml
infra/minio/: README.md
infra/monitoring/: README.md
infra/nginx/: README.md
infra/postgres/: README.md
infra/redis/: README.md
scripts/: README.md  init-env.ps1
(+20 files in other folders)
