[project]
name = "ai-learning-ai-service"
version = "0.1.0"
description = "AI capability service for AI Learning System"
readme = "docs/README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.11,<0.116.0",
  "pydantic-settings>=2.8.1,<3.0.0",
  "uvicorn[standard]>=0.34.0,<0.35.0"
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]